--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "react-native-mediatags",
-  "title": "React Native Storefront",
+  "name": "react-native-store-front",
+  "title": "React Native Store-front",
   "version": "1.0.0",
-  "description": "TODO",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/github_account/react-native-mediatags.git",
+    "url": "git+https://github.com/geroale/react-native-store-front.git",
     "baseUrl": "https://github.com/github_account/react-native-mediatags"
   },
   "keywords": [
     "react-native"
   ],
-  "author": {
-    "name": "Your Name",
-    "email": "yourname@email.com"
-  },
   "license": "MIT",
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
